--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,24 +1,103 @@
 <!DOCTYPE html>
 <html lang="es_AR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Proyecto 1: Vibra">
-    <meta name="keywords" content="Música, Vibra, Ritmo, Melodía, Canción, Letra">
-    <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Proyecto 1: Vibra" />
+    <meta
+      name="keywords"
+      content="Música, Vibra, Ritmo, Melodía, Canción, Letra"
+    />
+    <meta
+      name="author"
+      content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia"
+    />
+    <script
+      src="https://kit.fontawesome.com/6637e0286d.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../styles/contacto.css" />
     <title>Vibra</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header></header>
-    <main></main>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
+    <main>
+      <section>
+        <h3>Contacta con nosotros</h3>
+        <h1>No lo dude!</h1>
+        <article class="contactos">
+          <div>
+            <i class="fa-solid fa-location-dot fa-3x"></i>
+            <h2>Localidad</h2>
+            <p>General Paz 576 Piso 9, Oficina 2 4000 San Miguel de Tucumán</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-phone fa-3x"></i>
+            <h2>Teléfono</h2>
+            <p>+54 0381 578-3030</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-envelope fa-3x"></i>
+            <h2>Email</h2>
+            <p>rollingcode@gmail.com</p>
+          </div>
+        </article>
+        <article class="forms">
+            <form class="formulario-contacto">
+            <h2>Contacto</h2>
 
+            <div class="campo">
+              <label for="correo" class="etiqueta">Correo electrónico</label>
+              <input
+                type="email"
+                id="correo"
+                name="correo"
+                class="entrada"
+                placeholder="tucorreo@ejemplo.com"
+                required
+              />
+            </div>
+
+            <div class="campo">
+              <label for="mensaje" class="etiqueta">Mensaje</label>
+              <textarea
+                minlength="10"
+                maxlength="200"
+                id="mensaje"
+                name="mensaje"
+                class="entrada"
+                rows="5"
+                placeholder="Escribe tu mensaje aquí..."
+                required
+              ></textarea>
+            </div>
+
+            <button href="./error.html" type="submit" class="boton-enviar">Enviar mensaje</button>
+          </form>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.1059174722677!2d-65.20974192477854!3d-26.83658327669254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses!2sar!4v1752532495858!5m2!1ses!2sar"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </article>
+      </section>
+    </main>
+    <footer></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
